<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividad3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/ppal31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p3_1" />

        <Button
            android:id="@+id/ppal32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p3_2" />

        <Button
            android:id="@+id/ppal33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p3_3" />

        <Button
            android:id="@+id/ppal34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/p3_4" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>