<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <Button
                android:id="@+id/btnAct1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act1"
            />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btnAct2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act2"
            />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnAct3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act3"
            />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnAct4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act4"
            />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnAct5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act5"
            />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnAct6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Act6"
            />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>